--- a/lostandfound/app/src/main/res/layout/activity_newadvert.xml
+++ b/lostandfound/app/src/main/res/layout/activity_newadvert.xml
@@ -6,16 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".NewAdvert">
 
+    <fragment
+        android:id="@+id/autocomplete_fragment"
+        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+        android:layout_width="394dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="8dp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LocationLabel" />
+
     <Button
         android:id="@+id/SaveBtn"
         android:layout_width="261dp"
         android:layout_height="46dp"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginBottom="68dp"
         android:backgroundTint="#979797"
         android:text="SAVE"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LocationField" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <RadioGroup
         android:id="@+id/typeSelector"
@@ -112,18 +125,6 @@
         app:layout_constraintTop_toBottomOf="@+id/DateField" />
 
     <EditText
-        android:id="@+id/LocationField"
-        android:layout_width="339dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LocationLabel" />
-
-    <EditText
         android:id="@+id/NameField"
         android:layout_width="341dp"
         android:layout_height="42dp"
@@ -168,5 +169,42 @@
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/NameField" />
+
+    <TextView
+        android:id="@+id/LocationField"
+        android:layout_width="338dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="224dp"
+        android:layout_marginLeft="224dp"
+        android:layout_marginTop="768dp"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/locationFieldCurrent"
+        android:layout_width="338dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginTop="480dp"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/CurrentLocationbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="148dp"
+        android:layout_marginLeft="148dp"
+        android:layout_marginEnd="149dp"
+        android:layout_marginRight="149dp"
+        android:layout_marginBottom="16dp"
+        android:text="Get Current Location"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
